/*
 * Copyright (c) 2021 University of Porto/Faculty of Sciences (UP/FCUP).
 *
 * Author: Joaquim Silva
 *
 * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
 *
 */

syntax = "proto3";

option java_package = "pt.up.fc.dcc.hyrax.jay.protoc";
option java_outer_classname = "DroidJayLauncher";

package launcherservice;

message BoolValue {
    bool value = 1;
}

message Empty {
}

message String {
    string str = 1;
}

service LauncherService {
    rpc StartScheduler (Empty) returns (BoolValue) {
    };
    rpc StartWorker (Empty) returns (BoolValue) {
    };
    rpc StartProfiler (Empty) returns (BoolValue) {
    };
    rpc SetLogName (String) returns (BoolValue) {
    };
}